--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -13,20 +13,21 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:background="#b2d347"
+    android:background="@color/backgroundColor"
     tools:context=".activities.ForgetPasswordActivity">
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:src="@drawable/my_icon"
+        android:layout_marginTop="16px"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="@string/forget_password_lable"
+        android:text="@string/forgot_password_lable"
         android:textSize="32sp"
         android:layout_marginTop="30dp"
         android:textColor="@color/textColor"
@@ -35,21 +36,22 @@
 
 
         <EditText
-            android:layout_width="200dp"
-            android:layout_height="50dp"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_height"
             android:layout_marginTop="50dp"
             android:layout_gravity="center_horizontal"
             android:inputType="textEmailAddress"
             android:typeface="serif"
             android:hint="@string/enter_your_email"
+            android:textColorHint="@color/textColor"
             android:background="@drawable/rounded_corner"
             android:textColor="@color/textColor"
             android:id="@+id/email_address_forget_password_activity"/>
 
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/button_width"
+        android:layout_height="@dimen/button_height"
         android:text="@string/create_new_password"
         android:layout_marginTop="50dp"
         android:layout_gravity="center_horizontal"
