--- a/app/src/main/res/drawable/list_item_rounded.xml
+++ b/app/src/main/res/drawable/list_item_rounded.xml
@@ -6,14 +6,14 @@
 
     <stroke
         android:width="1dp"
-        android:color="#060606">
+        android:color="#ffffff">
     </stroke>
     <gradient
         android:angle="90"
-        android:centerY="10%"
-        android:centerColor="#ffff"
-        android:endColor="#e8f937"
-        android:startColor="#238922"
+        android:centerY="30%"
+        android:centerColor="#3e3d3d"
+        android:endColor="#52b10b"
+        android:startColor="#707070"
         />
 
 
