--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ddd"/>
+    <solid android:color="#454545"/>
     <corners android:radius="10dp"/>
     <padding android:left="10dp"/>
     <padding android:right="10dp"/>
