--- a/app/src/main/res/layout/activity_player_profile.xml
+++ b/app/src/main/res/layout/activity_player_profile.xml
@@ -16,7 +16,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:background="#b2d347"
+    android:background="@color/backgroundColor"
 
     android:paddingTop="@dimen/activity_vertical_margin"
 
@@ -24,18 +24,11 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
         android:src="@drawable/my_icon"
+        android:layout_marginTop="16px"
         />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/logout"
-        android:textSize="16sp"
-        android:layout_marginTop="10dp"
-        android:id="@+id/logout_player_profile_activity"
-        android:textColor="#fd0303"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -122,6 +115,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="40dp"
         android:textSize="20sp"
+
         android:id="@+id/phone_player_profile_activity"/>
 
 
