--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:id="@+id/result_activity"
-    android:background="#b2d347"
+    android:background="@color/backgroundColor"
     tools:context=".activities.ResultActivity">
 
     <ImageView
+        android:id="@+id/image_view_logo"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:background="@color/backgroundColor"
         android:src="@drawable/my_icon"
-        android:id="@+id/image_view_logo"
-        android:layout_margin="16dp"
 
         />
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/backgroundColor"/>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/image_view_logo"
-        android:background="#b2d347"
+        android:background="@color/backgroundColor"
         android:textColor="@color/textColor"
         android:id="@+id/list_view_result_activity">
 
 
     </ListView>
 
-</RelativeLayout>
+</LinearLayout>
