--- a/app/src/main/res/layout/fragment_by_level.xml
+++ b/app/src/main/res/layout/fragment_by_level.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#b2d347" >
+    android:background="@color/backgroundColor" >
     <!--
         <TextView android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -26,19 +26,7 @@
             android:orientation="vertical">
 
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:src="@drawable/my_icon"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/logout"
-                android:textSize="16sp"
-                android:layout_marginTop="10dp"
-                android:id="@+id/logout_fragment_by_level"
-                android:textColor="#fd0303"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -47,6 +35,12 @@
                 android:layout_marginTop="10dp"
                 android:id="@+id/text_view_email_fragment_by_level"
                 android:textColor="@color/textColor"/>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:src="@drawable/my_icon"
+                android:layout_marginTop="16px"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -68,13 +62,19 @@
                 >
 <RelativeLayout>
                 <Spinner
+
                     android:id="@+id/level_spinner_fragment_by_level"
-                    android:layout_width="150dp"
+                    android:layout_width="@dimen/button_width"
+                    android:layout_height="@dimen/button_height"
                     android:layout_marginTop="6dp"
                     android:textAlignment="center"
-                    android:layout_height="40dp"
+
                     android:textColor="@color/textColor"
                     android:background="@drawable/spinner_rounded"
+                    android:spinnerMode="dropdown"
+                    android:dropDownVerticalOffset="40dp"
+                    android:dropDownWidth="200dp"
+
                     />
     <ImageView
         android:layout_width="20dp"
@@ -89,8 +89,8 @@
 
             </TableLayout>
             <Button
-                android:layout_width="200dp"
-                android:layout_height="40dp"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
                 android:text="@string/search"
                 android:layout_marginTop="60dp"
                 android:background="@drawable/button"
