--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:text="Vitali Akbarov"
         android:layout_marginTop="6dp"
-
+        android:textColor="@color/textColor"
         android:layout_marginStart="20dp"
         android:textSize="25sp"
         android:id="@+id/full_name_list_view"/>
@@ -24,6 +24,7 @@
         android:textDirection="locale"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="@color/textColor"
         android:layout_below="@+id/full_name_list_view"
         android:layout_marginStart="80dp"
         android:id="@+id/age_list_view"/>
@@ -34,6 +35,7 @@
         android:textDirection="locale"
         android:text="Professional"
         android:textSize="20sp"
+        android:textColor="@color/textColor"
         android:textStyle="bold"
         android:layout_below="@+id/full_name_list_view"
         android:layout_toEndOf="@+id/age_list_view"
